--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -54,6 +54,8 @@ jobs:
           build_file: pisa-controller/hack/Dockerfile 
           tag_with_latest: true
           extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
+          cache: true
+          cache_registry: pisanixio/controller-cache
       - name: "Pisa-Proxy kaniko build"
         uses: mlycore/action-kaniko@master
         with:
@@ -64,6 +66,8 @@ jobs:
           build_file: pisa-proxy/hack/Dockerfile
           tag_with_latest: true
           extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
+          cache: true
+          cache_registry: pisanixio/proxy-cache
       - name: "install Pisa Controller"
         run: |
           set -x 
