feat(pisa-proxy, rewrite): WIP add rewrite
Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>

--- a/pisa-proxy/proxy/strategy/Cargo.toml
+++ b/pisa-proxy/proxy/strategy/Cargo.toml
@@ -26,3 +26,4 @@ tracing-subscriber = "0.3.9"
 mysql_parser = { path = "../../parser/mysql" }
 indexmap = "1.9.1"
 aho-corasick = "0.7.19"
+itertools = "0.10.4"
