feat(pisa-proxy, sharding): WIP: add stmt_cache, prepare_sharding_inner, executor
Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>

--- a/pisa-proxy/runtime/mysql/Cargo.toml
+++ b/pisa-proxy/runtime/mysql/Cargo.toml
@@ -33,3 +33,5 @@ tracing-futures = { version = "0.2.3" }
 tracing-subscriber = "0.3.9"
 tower = { version = "0.4.13" }
 #mysql-macro = { path = "../macros" }
+indexmap = "1.9.1"
+lazy_static = "1.4.0"
