--- a/pisa-proxy/proxy/strategy/Cargo.toml
+++ b/pisa-proxy/proxy/strategy/Cargo.toml
@@ -23,3 +23,8 @@ lazy_static = "1.4.0"
 tracing = "0.1.13"
 tracing-futures = { version = "0.2.3" }
 tracing-subscriber = "0.3.9"
+mysql_parser = { path = "../../parser/mysql" }
+indexmap = "1.9.1"
+aho-corasick = "0.7.19"
+itertools = "0.10.4"
+thiserror = "1.0"
