--- a/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
@@ -1,19 +1,3 @@
-##
-## Copyright 2022 SphereEx Authors
-##
-## Licensed under the Apache License, Version 2.0 (the "License");
-## you may not use this file except in compliance with the License.
-## You may obtain a copy of the License at
-##
-## http://www.apache.org/licenses/LICENSE-2.0
-##
-## Unless required by applicable law or agreed to in writing, software
-## distributed under the License is distributed on an "AS IS" BASIS,
-## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-## See the License for the specific language governing permissions and
-## limitations under the License.
-##
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -29,8 +13,6 @@ spec:
     listKind: VirtualDatabaseList
     plural: virtualdatabases
     singular: virtualdatabase
-    shortNames:
-      - vdb
   scope: Namespaced
   versions:
   - name: v1alpha1
@@ -51,12 +33,13 @@ spec:
           metadata:
             type: object
           spec:
-            description: VirtualDatabaseSpec defines the desired state of VirtualDatabase
             properties:
               services:
                 items:
                   description: Service Defines the content of a VirtualDatabase
                   properties:
+                    dataShard:
+                      type: string
                     databaseMySQL:
                       description: DatabaseMySQL The type one of VirtualDatabase.Represents
                         a virtual MySQL type
@@ -73,9 +56,9 @@ spec:
                         port:
                           format: int32
                           type: integer
-                        user:
-                          type: string
                         serverVersion:
+                          type: string
+                        user:
                           type: string
                       type: object
                     name:
