--- a/example/sharding/trafficstrategy.yml
+++ b/example/sharding/trafficstrategy.yml
@@ -17,12 +17,12 @@
 apiVersion: core.database-mesh.io/v1alpha1
 kind: TrafficStrategy
 metadata:
-  name: catalogue 
-  namespace: demotest 
+  name: test
+  namespace: default 
 spec:
   loadBalance:
     simpleLoadBalance:
       kind: random
   selector:
     matchLabels:
-      source: catalogue 
+      source: test 
