chore(crd): add shortname to virtualdatabase and datashard
Signed-off-by: mlycore <maxwell92@126.com>

--- a/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
@@ -29,6 +29,8 @@ spec:
     listKind: DataShardList
     plural: datashards
     singular: datashard
+    shortNames:
+    - shard 
   scope: Namespaced
   versions:
   - name: v1alpha1
@@ -75,9 +77,6 @@ spec:
                                 - value
                                 type: object
                               type: array
-                          required:
-                          - expression
-                          - nodes
                           type: object
                       required:
                       - valueSource
