--- a/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
@@ -1,3 +1,19 @@
+##
+## Copyright 2022 SphereEx Authors
+##
+## Licensed under the Apache License, Version 2.0 (the "License");
+## you may not use this file except in compliance with the License.
+## You may obtain a copy of the License at
+##
+## http://www.apache.org/licenses/LICENSE-2.0
+##
+## Unless required by applicable law or agreed to in writing, software
+## distributed under the License is distributed on an "AS IS" BASIS,
+## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+## See the License for the specific language governing permissions and
+## limitations under the License.
+##
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -13,6 +29,8 @@ spec:
     listKind: DataShardList
     plural: datashards
     singular: datashard
+    shortNames:
+    - shard 
   scope: Namespaced
   versions:
   - name: v1alpha1
@@ -59,9 +77,6 @@ spec:
                                 - value
                                 type: object
                               type: array
-                          required:
-                          - expression
-                          - nodes
                           type: object
                       required:
                       - valueSource
