--- a/pisa-daemon/app/config/Cargo.toml
+++ b/pisa-daemon/app/config/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
+reqwest = { version = "0.11.10", features = ["blocking", "json"] }
