feat(pisa-daemon): pisa-daemon add main function Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>

--- a/pisa-daemon/Cargo.toml
+++ b/pisa-daemon/Cargo.toml
@@ -1,13 +1,11 @@
-[package]
-name = "pisa-daemon"
-version = "0.1.0"
-edition = "2021"
-
 [workspace]
 resolver = "2"
 members = [
+  "cmd",
   "app/config",
   "app/traffic_qos",
   "bpf",
   "tc"
 ]
+
+default-members = ["cmd"]
