--- a/pisa-daemon/app/config/Cargo.toml
+++ b/pisa-daemon/app/config/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
 reqwest = { version = "0.11.10", features = ["blocking", "json"] }
+clap = { version = "4", features = ["env"] }
