--- a/pisa-daemon/bpf/Cargo.toml
+++ b/pisa-daemon/bpf/Cargo.toml
@@ -10,3 +10,4 @@ libc = "0.2.126"
 socket2 = { version = "0.4", features = [ "all" ] }
 #socket2 = { version = "0.4" }
 aya = "0.11.0"
+config = { path = "../app/config" }
