feat: add databaseClassName to VirtualDatabase CRD
Signed-off-by: mlycore <maxwell92@126.com>

--- a/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
@@ -52,6 +52,8 @@ spec:
             type: object
           spec:
             properties:
+              databaseClassName:
+                type: string
               services:
                 items:
                   description: Service Defines the content of a VirtualDatabase
