--- a/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
@@ -1,25 +1,9 @@
-##
-## Copyright 2022 SphereEx Authors
-##
-## Licensed under the Apache License, Version 2.0 (the "License");
-## you may not use this file except in compliance with the License.
-## You may obtain a copy of the License at
-##
-## http://www.apache.org/licenses/LICENSE-2.0
-##
-## Unless required by applicable law or agreed to in writing, software
-## distributed under the License is distributed on an "AS IS" BASIS,
-## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-## See the License for the specific language governing permissions and
-## limitations under the License.
-##
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
   name: virtualdatabases.core.database-mesh.io
 spec:
@@ -29,14 +13,11 @@ spec:
     listKind: VirtualDatabaseList
     plural: virtualdatabases
     singular: virtualdatabase
-    shortNames:
-    - vdb 
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: VirtualDatabase is the Schema for the virtualdatabases API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -51,6 +32,7 @@ spec:
           metadata:
             type: object
           spec:
+            description: VirtualDatabaseSpec defines the desired state of VirtualDatabase
             properties:
               databaseClassName:
                 type: string
@@ -83,6 +65,8 @@ spec:
                       type: object
                     name:
                       type: string
+                    qosClaim:
+                      type: string
                     trafficStrategy:
                       type: string
                   required:
@@ -92,11 +76,13 @@ spec:
                   type: object
                 type: array
             required:
+            - databaseClassName
             - services
             type: object
           status:
-            description: VirtualDatabaseStatus defines the observed state of VirtualDatabase
-              Endpoints display the name of the associated DatabaseEndpoint
+            description: 'VirtualDatabaseStatus defines the observed state of VirtualDatabase
+              Endpoints display the name of the associated DatabaseEndpoint TODO:
+              Implement dynamic updates'
             properties:
               endpoints:
                 items:
@@ -108,11 +94,3 @@ spec:
         type: object
     served: true
     storage: true
-    subresources:
-      status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
