--- a/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
@@ -1,25 +1,9 @@
-##
-## Copyright 2022 SphereEx Authors
-##
-## Licensed under the Apache License, Version 2.0 (the "License");
-## you may not use this file except in compliance with the License.
-## You may obtain a copy of the License at
-##
-## http://www.apache.org/licenses/LICENSE-2.0
-##
-## Unless required by applicable law or agreed to in writing, software
-## distributed under the License is distributed on an "AS IS" BASIS,
-## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-## See the License for the specific language governing permissions and
-## limitations under the License.
-##
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
   name: datashards.core.database-mesh.io
 spec:
@@ -29,14 +13,11 @@ spec:
     listKind: DataShardList
     plural: datashards
     singular: datashard
-    shortNames:
-    - shard 
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: DataShard is the Schema for the datashards API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -51,6 +32,7 @@ spec:
           metadata:
             type: object
           spec:
+            description: DataShardSpec is spec for DataShard
             properties:
               rules:
                 items:
@@ -70,11 +52,7 @@ spec:
                                     properties:
                                       name:
                                         type: string
-                                    required:
-                                    - name
                                     type: object
-                                required:
-                                - value
                                 type: object
                               type: array
                           type: object
@@ -172,16 +150,7 @@ spec:
             - rules
             type: object
           status:
-            description: DataShardStatus defines the observed state of DataShard
             type: object
         type: object
     served: true
     storage: true
-    subresources:
-      status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
