--- a/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
@@ -14,12 +14,13 @@
 ## limitations under the License.
 ##
 
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
   name: datashards.core.database-mesh.io
 spec:
@@ -29,14 +30,11 @@ spec:
     listKind: DataShardList
     plural: datashards
     singular: datashard
-    shortNames:
-    - shard 
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: DataShard is the Schema for the datashards API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -51,6 +49,7 @@ spec:
           metadata:
             type: object
           spec:
+            description: DataShardSpec is spec for DataShard
             properties:
               rules:
                 items:
@@ -70,11 +69,7 @@ spec:
                                     properties:
                                       name:
                                         type: string
-                                    required:
-                                    - name
                                     type: object
-                                required:
-                                - value
                                 type: object
                               type: array
                           type: object
@@ -172,16 +167,7 @@ spec:
             - rules
             type: object
           status:
-            description: DataShardStatus defines the observed state of DataShard
             type: object
         type: object
     served: true
     storage: true
-    subresources:
-      status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
