--- a/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
@@ -14,12 +14,13 @@
 ## limitations under the License.
 ##
 
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
   name: trafficstrategies.core.database-mesh.io
 spec:
@@ -29,14 +30,11 @@ spec:
     listKind: TrafficStrategyList
     plural: trafficstrategies
     singular: trafficstrategy
-    shortNames:
-      - ts
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: TrafficStrategy is the Schema for the trafficstrategies API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -62,7 +60,6 @@ spec:
                       items:
                         type: string
                       type: array
-                      description: 'the regex of rule'
                   required:
                   - regex
                   type: object
@@ -86,7 +83,6 @@ spec:
                       items:
                         type: string
                       type: array
-                      description: 'the regex of rule'
                   required:
                   - duration
                   - maxConcurrency
@@ -97,136 +93,197 @@ spec:
                 description: 'LoadBalance The choice of load balancing strategy, currently
                   supported: SimpleLoadBalance'
                 properties:
+                  readWriteSplitting:
+                    description: ReadWriteSplitting support static and dynamic read-write
+                      splitting algorithm
+                    properties:
+                      dynamic:
+                        properties:
+                          defaultTarget:
+                            type: string
+                          discovery:
+                            properties:
+                              masterHighAvailability:
+                                properties:
+                                  connectionProbe:
+                                    properties:
+                                      failureThreshold:
+                                        format: int64
+                                        type: integer
+                                      periodMilliseconds:
+                                        format: int64
+                                        type: integer
+                                      successThreshold:
+                                        format: int64
+                                        type: integer
+                                      timeoutMilliseconds:
+                                        format: int64
+                                        type: integer
+                                    required:
+                                    - failureThreshold
+                                    - periodMilliseconds
+                                    - successThreshold
+                                    - timeoutMilliseconds
+                                    type: object
+                                  monitorInterval:
+                                    format: int64
+                                    type: integer
+                                  password:
+                                    type: string
+                                  pingProbe:
+                                    properties:
+                                      failureThreshold:
+                                        format: int64
+                                        type: integer
+                                      periodMilliseconds:
+                                        format: int64
+                                        type: integer
+                                      successThreshold:
+                                        format: int64
+                                        type: integer
+                                      timeoutMilliseconds:
+                                        format: int64
+                                        type: integer
+                                    required:
+                                    - failureThreshold
+                                    - periodMilliseconds
+                                    - successThreshold
+                                    - timeoutMilliseconds
+                                    type: object
+                                  readOnlyProbe:
+                                    properties:
+                                      failureThreshold:
+                                        format: int64
+                                        type: integer
+                                      periodMilliseconds:
+                                        format: int64
+                                        type: integer
+                                      successThreshold:
+                                        format: int64
+                                        type: integer
+                                      timeoutMilliseconds:
+                                        format: int64
+                                        type: integer
+                                    required:
+                                    - failureThreshold
+                                    - periodMilliseconds
+                                    - successThreshold
+                                    - timeoutMilliseconds
+                                    type: object
+                                  replicationLagProbe:
+                                    properties:
+                                      failureThreshold:
+                                        format: int64
+                                        type: integer
+                                      maxReplicationLag:
+                                        format: int64
+                                        type: integer
+                                      periodMilliseconds:
+                                        format: int64
+                                        type: integer
+                                      successThreshold:
+                                        format: int64
+                                        type: integer
+                                      timeoutMilliseconds:
+                                        format: int64
+                                        type: integer
+                                    required:
+                                    - failureThreshold
+                                    - maxReplicationLag
+                                    - periodMilliseconds
+                                    - successThreshold
+                                    - timeoutMilliseconds
+                                    type: object
+                                  user:
+                                    type: string
+                                required:
+                                - connectionProbe
+                                - monitorInterval
+                                - password
+                                - pingProbe
+                                - readOnlyProbe
+                                - replicationLagProbe
+                                - user
+                                type: object
+                            type: object
+                          rules:
+                            items:
+                              description: ReadWriteSplittingStaticRule defines static
+                                rules
+                              properties:
+                                algorithmName:
+                                  description: LoadBalanceAlgorithm defines the name
+                                    of managed loadbalance algorithm
+                                  type: string
+                                name:
+                                  type: string
+                                regex:
+                                  items:
+                                    type: string
+                                  type: array
+                                target:
+                                  type: string
+                                type:
+                                  description: RuleType defines the type of static
+                                    rule
+                                  type: string
+                              required:
+                              - algorithmName
+                              - name
+                              - type
+                              type: object
+                            type: array
+                        required:
+                        - discovery
+                        type: object
+                      static:
+                        description: ReadWriteSplittingStatic defines static rules
+                          based read-write splitting algorithm
+                        properties:
+                          defaultTarget:
+                            type: string
+                          rules:
+                            items:
+                              description: ReadWriteSplittingStaticRule defines static
+                                rules
+                              properties:
+                                algorithmName:
+                                  description: LoadBalanceAlgorithm defines the name
+                                    of managed loadbalance algorithm
+                                  type: string
+                                name:
+                                  type: string
+                                regex:
+                                  items:
+                                    type: string
+                                  type: array
+                                target:
+                                  type: string
+                                type:
+                                  description: RuleType defines the type of static
+                                    rule
+                                  type: string
+                              required:
+                              - algorithmName
+                              - name
+                              - type
+                              type: object
+                            type: array
+                        type: object
+                    required:
+                    - dynamic
+                    - static
+                    type: object
                   simpleLoadBalance:
                     description: 'SimpleLoadBalance support load balancing type: 1.
                       random 2. roundrobin'
                     properties:
                       kind:
+                        description: LoadBalanceAlgorithm defines the name of managed
+                          loadbalance algorithm
                         type: string
                     required:
                     - kind
-                    type: object
-                  readWriteSplitting:
-                    description: 'ReadWriteSplitting support read-write splitting'
-                    properties:
-                      static:
-                        description: 'Static rule based read write splitting'
-                        type: object 
-                        properties:
-                          defaultTarget:
-                            type: string
-                          rules:                           
-                            type: array
-                            items:
-                              type: object
-                              description: 'A set of rules' 
-                              properties:
-                                name:
-                                  description: 'the name of rule'
-                                  type: string
-                                type:
-                                  description: 'the type of rule'
-                                  type: string
-                                regex:
-                                  items:
-                                    type: string
-                                  type: array
-                                  description: 'the regex of rule'
-                                target:
-                                  description: 'the target of rule'
-                                  type: string
-                                algorithmName:
-                                  description: 'the algorithm of rule'
-                                  type: string
-                      dynamic:
-                        description: 'Dynamic rule based read write splitting'
-                        type: object 
-                        properties:
-                          defaultTarget:
-                            type: string
-                          rules:                           
-                            type: array
-                            items:
-                              type: object
-                              description: 'A set of rules' 
-                              properties:
-                                name:
-                                  description: 'the name of rule'
-                                  type: string
-                                type:
-                                  description: 'the type of rule'
-                                  type: string
-                                regex:
-                                  items:
-                                    type: string
-                                  type: array
-                                  description: 'the regex of rule'
-                                target:
-                                  description: 'the target of rule'
-                                  type: string
-                                algorithmName:
-                                  description: 'the algorithm of rule'
-                                  type: string
-                          discovery:
-                            type: object
-                            description: 'Discovery setup to detect role of MySQL instances'
-                            properties:
-                              masterHighAvailability:
-                                type: object
-                                description: 'Master High Availability'
-                                properties:
-                                  user:
-                                    type: string
-                                  password:
-                                    type: string
-                                  monitorPeriod:
-                                    type: integer
-                                  connectionProbe:
-                                    type: object
-                                    properties:
-                                      periodMilliseconds:
-                                        type: integer
-                                      timeoutMilliseconds:
-                                        type: integer
-                                      failureThreshold:
-                                        type: integer
-                                      successThreshold:
-                                        type: integer
-                                  pingProbe:
-                                    type: object
-                                    properties:
-                                      periodMilliseconds:
-                                        type: integer
-                                      timeoutMilliseconds:
-                                        type: integer
-                                      failureThreshold:
-                                        type: integer
-                                      successThreshold:
-                                        type: integer
-                                  replicationLagProbe:
-                                    type: object
-                                    properties:
-                                      maxReplicationLag:
-                                        type: integer
-                                      periodMilliseconds:
-                                        type: integer
-                                      timeoutMilliseconds:
-                                        type: integer
-                                      failureThreshold:
-                                        type: integer
-                                      successThreshold:
-                                        type: integer
-                                  readOnlyProbe:
-                                    type: object
-                                    properties:
-                                      periodMilliseconds:
-                                        type: integer
-                                      timeoutMilliseconds:
-                                        type: integer
-                                      failureThreshold:
-                                        type: integer
-                                      successThreshold:
-                                        type: integer
                     type: object
                 type: object
               selector:
@@ -280,16 +337,7 @@ spec:
             - selector
             type: object
           status:
-            description: TrafficStrategyStatus defines the observed state of TrafficStrategy
             type: object
         type: object
     served: true
     storage: true
-    subresources:
-      status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
