--- a/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
@@ -14,12 +14,13 @@
 ## limitations under the License.
 ##
 
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
   name: virtualdatabases.core.database-mesh.io
 spec:
@@ -29,14 +30,11 @@ spec:
     listKind: VirtualDatabaseList
     plural: virtualdatabases
     singular: virtualdatabase
-    shortNames:
-    - vdb 
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: VirtualDatabase is the Schema for the virtualdatabases API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -51,6 +49,7 @@ spec:
           metadata:
             type: object
           spec:
+            description: VirtualDatabaseSpec defines the desired state of VirtualDatabase
             properties:
               databaseClassName:
                 type: string
@@ -83,6 +82,8 @@ spec:
                       type: object
                     name:
                       type: string
+                    qosClaim:
+                      type: string
                     trafficStrategy:
                       type: string
                   required:
@@ -92,11 +93,13 @@ spec:
                   type: object
                 type: array
             required:
+            - databaseClassName
             - services
             type: object
           status:
-            description: VirtualDatabaseStatus defines the observed state of VirtualDatabase
-              Endpoints display the name of the associated DatabaseEndpoint
+            description: 'VirtualDatabaseStatus defines the observed state of VirtualDatabase
+              Endpoints display the name of the associated DatabaseEndpoint TODO:
+              Implement dynamic updates'
             properties:
               endpoints:
                 items:
@@ -108,11 +111,3 @@ spec:
         type: object
     served: true
     storage: true
-    subresources:
-      status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
