--- a/charts/pisa-controller/crds/core.database-mesh.io_databaseendpoints.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_databaseendpoints.yaml
@@ -14,7 +14,6 @@
 ## limitations under the License.
 ##
 
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -29,10 +28,22 @@ spec:
     kind: DatabaseEndpoint
     listKind: DatabaseEndpointList
     plural: databaseendpoints
+    shortNames:
+    - dbep
     singular: databaseendpoint
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .status.protocol
+      name: Protocol
+      type: string
+    - jsonPath: .status.endpoint
+      name: Endpoint
+      type: string
+    - jsonPath: .status.port
+      name: Port
+      type: integer
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         properties:
@@ -82,7 +93,21 @@ spec:
             - database
             type: object
           status:
+            properties:
+              endpoint:
+                type: string
+              port:
+                format: int32
+                type: integer
+              protocol:
+                type: string
+            required:
+            - endpoint
+            - port
+            - protocol
             type: object
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
