--- a/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
@@ -14,7 +14,6 @@
 ## limitations under the License.
 ##
 
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -29,6 +28,8 @@ spec:
     kind: DataShard
     listKind: DataShardList
     plural: datashards
+    shortNames:
+    - ds
     singular: datashard
   scope: Namespaced
   versions:
@@ -159,7 +160,6 @@ spec:
                       - tableShardingColumn
                       type: object
                   required:
-                  - actualDatanodes
                   - tableName
                   type: object
                 type: array
@@ -171,3 +171,5 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
