--- a/charts/pisa-controller/crds/core.database-mesh.io_qosclaims.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_qosclaims.yaml
@@ -14,7 +14,6 @@
 ## limitations under the License.
 ##
 
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -29,6 +28,8 @@ spec:
     kind: QoSClaim
     listKind: QoSClaimList
     plural: qosclaims
+    shortNames:
+    - qc
     singular: qosclaim
   scope: Namespaced
   versions:
@@ -72,3 +73,5 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
