--- a/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
@@ -14,7 +14,6 @@
 ## limitations under the License.
 ##
 
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -29,6 +28,8 @@ spec:
     kind: TrafficStrategy
     listKind: TrafficStrategyList
     plural: trafficstrategies
+    shortNames:
+    - ts
     singular: trafficstrategy
   scope: Namespaced
   versions:
@@ -197,12 +198,8 @@ spec:
                                   user:
                                     type: string
                                 required:
-                                - connectionProbe
                                 - monitorInterval
                                 - password
-                                - pingProbe
-                                - readOnlyProbe
-                                - replicationLagProbe
                                 - user
                                 type: object
                             type: object
@@ -270,9 +267,6 @@ spec:
                               type: object
                             type: array
                         type: object
-                    required:
-                    - dynamic
-                    - static
                     type: object
                   simpleLoadBalance:
                     description: 'SimpleLoadBalance support load balancing type: 1.
@@ -333,11 +327,11 @@ spec:
                       are ANDed.
                     type: object
                 type: object
-            required:
-            - selector
             type: object
           status:
             type: object
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
