--- a/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
@@ -14,7 +14,6 @@
 ## limitations under the License.
 ##
 
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -29,6 +28,8 @@ spec:
     kind: VirtualDatabase
     listKind: VirtualDatabaseList
     plural: virtualdatabases
+    shortNames:
+    - vdb
     singular: virtualdatabase
   scope: Namespaced
   versions:
@@ -89,11 +90,9 @@ spec:
                   required:
                   - databaseMySQL
                   - name
-                  - trafficStrategy
                   type: object
                 type: array
             required:
-            - databaseClassName
             - services
             type: object
           status:
@@ -111,3 +110,5 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
