chore: update DatabaseEndpoint crd
Signed-off-by: mlycore <maxwell92@126.com>

--- a/charts/pisa-controller/crds/core.database-mesh.io_databaseendpoints.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_databaseendpoints.yaml
@@ -94,6 +94,8 @@ spec:
             type: object
           status:
             properties:
+              arn:
+                type: string
               endpoint:
                 type: string
               port:
