--- a/pisa-proxy/app/metrics/Cargo.toml
+++ b/pisa-proxy/app/metrics/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket_prometheus = "0.10.0-rc.1"
 runtime_mysql = { path = "../../runtime/mysql" }
+prometheus = "0.13.3"
