--- a/pisa-proxy/cmd/pisa/Cargo.toml
+++ b/pisa-proxy/cmd/pisa/Cargo.toml
@@ -8,6 +8,12 @@ edition = "2021"
 name = "proxy"
 path = "src/main.rs"
 
+
+#[build-dependencies]
+#anyhow = { version = "1.0", default-features = false }
+#vergen = { version = "8.0.0-beta.0", features =  ["build", "git", "gitcl"] }
+
+
 [dependencies]
 async-std = { version = "1.9.0" }
 bytes = "1"
@@ -24,8 +30,9 @@ server = { path = "../../app/server" }
 tokio = { version = "1.0.0", features = ["full", "tracing"] }
 tokio-stream = { version = "0.1" }
 tokio-util = { version = "0.6.7", features = ["full"] }
-tracing = "0.1.13"
+tracing = "0.1.37"
 tracing-futures = { version = "0.2.3" }
 tracing-subscriber = "0.3.9"
 warp = { version = "0.3" }
+vergen = "7.5.0"
 
