--- a/pisa-proxy/http/Cargo.toml
+++ b/pisa-proxy/http/Cargo.toml
@@ -10,9 +10,9 @@ config = { path = "../app/config" }
 once_cell = "1.10.0"
 pisa_error = { path = "../error", package = "error" }
 pisa_metrics = { path = "../app/metrics", package = "metrics" }
-rocket = "0.5.0-rc.1" 
-rocket_prometheus = "0.10.0-rc.1"
 serde = { version = "1.0.126", features = ["derive"] }
 server = { path = "../app/server" }
 ver = { package = "version", path = "../version" }
-warp = { version = "0.3" }
+axum = "0.6.2"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.9"
